# epp-sla-reporter-text2sql-datagen

./: README.md  pyproject.toml
config/: main.config.json
src/app/: app.py
src/common/: config_manager.py  constants.py  s3_utils.py
src/database/: __init__.py  db_generator.py
src/datagen/: README.md  __init__.py  augmentor.py  config.py  config_utils.py  filters.py  generator.py  generator.py.1  templates.py
src/model/: __init__.py  inference.py  trainer.py
src/pipeline/: __init__.py  pipeline_run.py  run_pipeline.sh
src/ui/: api_client.py  app_main.py  db_executor.py  utils_s3.py
