[project]
name = "epp-sla-reporter-text2sql-datagen"
version = "0.1.0"
description = "EPP SLA REPORTER TEXT2SQL MODEL"
authors = [
    { name = "garudaS9S" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "boto3>=1.42.94",
    "datasets>=4.8.4",
    "pandas>=3.0.2",
    "parrot>=0.1.10",
    "peft>=0.18.1",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "spacy>=3.8.14",
    "streamlit>=1.56.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]


# -----------------------------
# Build system
# -----------------------------
[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

# -----------------------------
# Tooling (optional but useful)
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]
